--- a/site.yaml
+++ b/site.yaml
@@ -20,18 +20,18 @@ context:
   data:
     base: http://goby.github.io
     languages:
-      fr: Français
+      cn: 简体中文
       en: English
 meta:
   nodemeta: meta.yaml
-  author: Vincent Bernat
-  title: "Disruptive Ninja"
+  author: Tanglim LUA
+  title: "Walk in the Deep Sea"
   created: git
   modified: git
   language: en
 #  analytics: UA-21482482-4
-  disqus: luffycx
-  keywords: "debian, python, network, vincent bernat"
+  disqus: gov2
+  keywords: "gis, python, performance, netease"
 less:
   app: D:\goby\bin\less\lessc.cmd
 markdown:
@@ -78,6 +78,7 @@ tagger:
     "network":
       descr_en: "Network"
       descr_fr: "Réseau"
+	  descr_cn: "网络"
     "snmp":
       descr: "SNMP"
     "desktop":
