--- a/site.yaml
+++ b/site.yaml
@@ -18,7 +18,7 @@ plugins:
   
 context:
   data:
-    base: http://blog.gobyoung.com
+    base: https://blog.gobyoung.com
     languages:
       cn: 简体中文
 meta:
