--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Jinja2==2.6
-Markdown==2.1.1
-MarkupSafe==0.15
-PIL==1.1.7
-PyYAML==3.10
-Pygments==1.5
+Babel==2.2.0
+Jinja2==2.7.3
+Markdown==2.6.6
+MarkupSafe==0.23
+Pillow==3.2.0
+PyYAML==3.11
+Pygments==2.1.3
 argparse==1.2.1
-commando==0.1.2a
-cssprefixer==1.4.1
-cssutils==1.0
-distribute==0.6.34
-glue==0.1.8
+commando==1.0.0
+fswrap==1.0.0
+hyde==0.8.9
 python-dateutil==1.5
 python-magic==0.4.3
-smartypants==1.6.0.3
--e git://github.com/hyde/typogrify.git@6937a8a6e60b305abe23a1be70a3c496e4d5b8ac#egg=typogrify-dev
+pytz==2016.3
+smartypants==1.8.6
+typogrify==2.0.7
 wsgiref==0.1.2
