--- a/content/cn/meta.yaml
+++ b/content/cn/meta.yaml
@@ -16,6 +16,9 @@ menu:
   -
      name: "About"
      page: "about.html"
+  -
+     name: "Resources"
+     page: "resources.html"
      
 l10n:
   otherlinks: "其他"
