--- a/content/cn/meta.yaml
+++ b/content/cn/meta.yaml
@@ -14,11 +14,14 @@ menu:
      name: "Projects"
      page: "https://github.com/goby"
   -
-     name: "About"
-     page: "about.html"
-  -
      name: "Resources"
      page: "resources.html"
+  -
+     name: "Books"
+     page: "/books/"
+  -
+     name: "About"
+     page: "about.html"
      
 l10n:
   otherlinks: "其他"
