--- a/_config.yml
+++ b/_config.yml
@@ -103,5 +103,5 @@ menu:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com/goby/goby.github.io.git
+  repo: git@github.com:goby/goby.github.io.git
   branch: master
