add CNAME for github-page

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: What a amazing world!
+title: gobyoung
+subtitle: Walk deep in the sea
 description:
 author: Tanglim LUA
 language:
