--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "version": "3.3.8"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "ejs-lint": "^0.3.0",
     "hexo": "^3.2.0",
+    "hexo-blog-encrypt": "github:goby/hexo-blog-encrypt",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
