--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - google7a2c70f74f6cdf22.html
 
 # Writing
 new_post_name: :title.md # File name of new posts
